Filtereset now works properly for drafts

--- a/kii/stream/templates/stream/streamitem/list_item.html
+++ b/kii/stream/templates/stream/streamitem/list_item.html
@@ -20,7 +20,7 @@
                     </div>
                 {% endblock %}
                     <ul class="actions admin">
-                        <li class="update"><a href="{{ item.reverse_update }}">{% icon "fi-pencil" %}{% trans "update" %}</a></li>                        
+                        <li class="update"><a href="{{ object.reverse_update }}">{% icon "fi-pencil" %}{% trans "update" %}</a></li>                        
                     </ul>
             {% endblock %}
         </div>
