--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -150,7 +150,7 @@ textarea {
 
 article.stream-item {
     max-width: $content-width;
-    margin: 0 auto; 
+    margin: 1rem auto; 
     border-bottom: 1px solid $gainsboro;
     padding: 1rem 0;
 
