--- a/kii/stream/templates/stream/stream/info.html
+++ b/kii/stream/templates/stream/stream/info.html
@@ -7,7 +7,11 @@
         {% if stream.owner == request.user %}
             <li><a href="{{ stream.reverse_update }}">{% icon "fi-pencil" %}{% trans "update" %}</a></li>
             <li><a href="">
-                
+                {% if request.user|is_following:stream %}
+                    stop following
+                {% else %}
+                    follow
+                {% endif %}
             </a></li>
         {% endif %}
     </ul>
