--- a/kii/activity/templates/actstream/action.html
+++ b/kii/activity/templates/actstream/action.html
@@ -1,6 +1,7 @@
 {% load i18n %}
 <p>{% if action.actor.get_absolute_url %}
 <a href="{{ action.actor.get_absolute_url }}">{{ action.actor }}</a>
+{% elif action.actor.pk == -1 %}{% trans "anonymous user" %}
 {% else %}<a href="{{ action.actor_url }}">{{ action.actor }}</a>{% endif %}
 {{ action.verb }}
 {% if action.action_object %}
