Added create stream view

--- a/kii/glue/templates/glue/main_navigation.html
+++ b/kii/glue/templates/glue/main_navigation.html
@@ -12,7 +12,14 @@
     <section class="top-bar-section">
         {% if request.user.is_authenticated %}
             <ul>
-                <li><a href="{{ user_stream.reverse_detail }}">{% icon "fi-home" %}{% trans "my stream" %}</a></li>
+                <li class="has-dropdown">
+                    <a href="#">{% icon "fi-home" %}{% trans "my stream" %}</a>
+                    <ul class="dropdown">
+                        {% for stream in user_streams %}
+                            <li><a href="{{ stream.reverse_detail }}">{{ stream.title }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </li>
             </ul>
             <ul>
                 <li class="has-dropdown">
@@ -36,6 +43,7 @@
                             {% if url %}
                                 <li><a href="{{ url }}">{{ model.meta.verbose_name }}</a>
                             {% endif %}
+                            <li><a href="{% url 'kii:stream:create' %}">{{ stream_model.meta.verbose_name }}</a>
                         {% endfor %}    
                     </ul>
                 </li>
