--- a/kii/glue/templates/glue/home.html
+++ b/kii/glue/templates/glue/home.html
@@ -8,7 +8,7 @@
         <ul class="last-items">
             {% for item in last_items %}
             <li><a href="{{ item.reverse_detail }}" class="title">{{ item.title }}</a> - <span class="publication">{% blocktrans with timesince=item.publication_date|timesince %}{{ timesince }} ago {% endblocktrans %}</span>
-                (<a href="{{ item.root.reverse_detail }}">{{ item.owner.username }}</a>)</li>
+                (<a href="{{ item.root.reverse_detail }}">{{ item.root.title }}</a>)</li>
             {% endfor %}
         </ul>
     </section>
