--- a/kii/glue/static/default/glue/scss/app.scss
+++ b/kii/glue/static/default/glue/scss/app.scss
@@ -179,6 +179,14 @@ form {
     max-width: 50rem;
     display: block;
     margin: 0 auto;
+    .required {
+        label {
+            &:after {
+                content: ' *';
+                color: red;
+            }
+        }
+    }
 }
 
 textarea {
