--- a/kii/base_models/templates/base_models/modelform.html
+++ b/kii/base_models/templates/base_models/modelform.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n static %}
 <form action="{{ request.path }}" class="{{ form.Meta.model.class_name }} {{ action }}" method="POST">
     {% block instance_info %}
         {% if action == "update" %}
@@ -11,5 +11,17 @@
 
     {% if action == "update" and form.instance.reverse_delete %}
     <a class="button alert right" href="{{ form.instance.reverse_delete }}">{% trans "delete" %}</a>
+    {% endif %}
+
+    {% if form.fields.content %}
+        <script src="{% static 'default/base_models/epiceditor/js/epiceditor.min.js' %}"></script>
+        <script type="text/javascript">
+        var opts = {
+            basePath: '{% static "default/base_models/epiceditor" %}',
+            textarea: 'id_content'
+        }
+        var editor = new EpicEditor(opts);
+        editor.load();
+        </script>
     {% endif %}
 </form>
