--- a/kii/app/templates/app/app_model_page.html
+++ b/kii/app/templates/app/app_model_page.html
@@ -1,1 +1,11 @@
 {% extends "app/app_page.html" %}
+
+{% block css %}
+    {{ block.super }}
+    {{ form.media.css }}
+{% endblock %}
+
+{% block head_js %}
+    {{ block.super }}
+    {{ form.media.js }}
+{% endblock %}
