Added autocomplete_light search input in navigation

--- a/kii/glue/templates/glue/base.html
+++ b/kii/glue/templates/glue/base.html
@@ -12,6 +12,7 @@
             <script type="text/javascript" src="{% static 'glue/bower_components/foundation/js/vendor/modernizr.js' %}"></script>
             <script type="text/javascript" src="{% static 'glue/bower_components/foundation/js/foundation.min.js' %}"></script>    
             <script type="text/javascript" src="{% static 'glue/bower_components/foundation/js/foundation/foundation.alert.js' %}"></script>
+            <script type="text/javascript" src="{% static 'autocomplete_light/autocomplete.js' %}"></script>
         {% endblock %}
     </head>
     <body class="{% block body_class %}{% endblock %}"> 
