--- a/kii/glue/templates/glue/main_navigation.html
+++ b/kii/glue/templates/glue/main_navigation.html
@@ -10,7 +10,6 @@
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
     </ul>
     <section class="top-bar-section">
-
         {% if request.user.is_authenticated %}
             <ul>
                 <li class="has-dropdown">
@@ -58,6 +57,21 @@
             {% endif %}
             
         {% endif %}
+        <ul>
+            <li class="has-form"><input type="text" id="navigation-search" placeholder="Find Stuff"></li>
+        </ul>
+        <script type="text/javascript">
+        var autocomplete = $('#navigation-search').yourlabsAutocomplete({
+            url: '{% url "kii:api:search:autocomplete:navigation" %}',
+            // With keyboard, we should iterate around <a> tags in the autocomplete
+            choiceSelector: 'a',
+        }).input.bind('selectChoice', function(e, choice, autocomplete) {
+            // When a choice is selected, open it. Note: this is not needed for
+            // mouse click on the links of course, but this is necessary for keyboard
+            // selection.
+            window.location.href = choice.attr('href');
+        });
+        </script>
         {% if request.user.is_authenticated %}
             <ul class="right">
                 <li class="has-dropdown"><a href="#">{% icon "fi-torso" %}{{ request.user.username }}</a>
