--- a/kii/glue/static/glue/scss/app.scss
+++ b/kii/glue/static/glue/scss/app.scss
@@ -118,6 +118,7 @@ body {
 .yourlabs-autocomplete {
     background-color: white;
     box-shadow: 1px 1px 1px $gainsboro;
+    padding-top: 1rem;
     > * {
         display: block;
         padding: 0.5rem;
