--- a/kii/base_models/templates/base_models/modelform.html
+++ b/kii/base_models/templates/base_models/modelform.html
@@ -1,5 +1,5 @@
 {% load i18n static %}
-<form action="{{ request.path }}" class="{{ form.Meta.model.class_name }} {{ action }}" method="POST">
+<form action="{{ request.path }}" class="{{ form.Meta.model.class_name }} {{ action }}" method="POST" enctype="multipart/form-data">
     {% block instance_info %}
         {% if action == "update" %}
             <h2><a href="{{ form.instance.get_absolute_url }}">{{ form.instance }}</a></h2>
