--- a/kii/glue/static/glue/scss/app.scss
+++ b/kii/glue/static/glue/scss/app.scss
@@ -246,6 +246,9 @@ article.stream-item {
                 padding-bottom: 1rem;
                 border-bottom: 1px solid $gainsboro;
             }
+            img {
+                margin: 1rem 0;                
+            }
         }
     }
 }
